--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>This is for DES157A</h1>
+    <p>Here is a paragraph.</p>
+    <p>Here is another paragraph.</p>
+    <h2>FTP</h2>
 </body>
 </html>
