--- a/index.html
+++ b/index.html
@@ -3,12 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DES157A Homepage</title>
+    <title>Portal Page</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@400;700&family=Jaldi&family=JetBrains+Mono&display=swap" rel="stylesheet">
+
+    <link href="styles.css" rel="stylesheet">
+
 </head>
 <body>
-    <h1>This is for DES157A</h1>
-    <p>Here is a paragraph.</p>
-    <p>Here is another paragraph.</p>
-    <h2>FTP</h2>
+    <header> 
+        <h1> Ophelia's Portal Page </h1>
+        <div id="banner">
+            <h2>DES 157A - Interactive Media II - Winter 2023</h2>
+        </div>
+    </header> 
+
+    <main>
+        <section>
+            <h2> Studios </h2>
+
+            <ul>
+                <li> <a href="#"> Learning Journal </a></li>           
+                <li> <a href="#"> Mad Libs 2.0 </a></li> 
+                <li> <a href="#"> Every Picture </a></li> 
+                <li> <a href="#"> Game On! </a></li> 
+            </ul>
+
+            <h2> Experiments </h2>
+
+            <ul>
+                <li> <a href="#"> Exp. 1 </a></li>           
+                <li> <a href="#"> Exp. 2 </a></li> 
+            </ul>
+        </section>
+
+        <section>
+            <h2> Research & Development </h2>
+
+            <ul>
+                <li> <a href="#"> Project Brief </a></li>           
+                <li> <a href="#"> Design Comp </a></li> 
+                <li> <a href="#"> Version 1 </a></li> 
+                <li> <a href="#"> Version 2 (User Test) </a></li> 
+                <li> <a href="#"> User Test Results </a></li> 
+            </ul>
+        </section>
+
+        <section>
+            <h2> Final </h2>
+
+            <ul>
+                <li> <a href="#"> Final Project </a></li>           
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p> Page by Ophelia Hsiao <a href="mailto:&#111;&#114;&#104;&#115;&#105;&#097;&#111;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;" id="email">Email Me!</a></p>
+    </footer>
+
 </body>
 </html>
