--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header> 
         <h1> Ophelia's Portal Page </h1>
         <div id="banner">
-            <h2>DES 157A - Interactive Media II - Winter 2023</h2>
+            <h2>DES 157A - Interactive Media II - Winter 2024</h2>
         </div>
     </header> 
 
@@ -33,7 +33,7 @@
             <h2> Experiments </h2>
 
             <ul>
-                <li> <a href="#"> Exp. 1 </a></li>           
+                <li> <a href="experiment1/index.html"> Exp. 1 </a></li>           
                 <li> <a href="#"> Exp. 2 </a></li> 
             </ul>
         </section>
