--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2> Studios </h2>
 
             <ul>
-                <li> <a href="#"> Learning Journal </a></li>           
+                <li> <a href="learningjournal/index.html"> Learning Journal </a></li>           
                 <li> <a href="#"> Mad Libs 2.0 </a></li> 
                 <li> <a href="#"> Every Picture </a></li> 
                 <li> <a href="#"> Game On! </a></li> 
@@ -33,7 +33,7 @@
             <h2> Experiments </h2>
 
             <ul>
-                <li> <a href="experiment1/index.html"> Exp. 1 </a></li>           
+                <li> <a href="exp1.html"> Exp. 1 </a></li>           
                 <li> <a href="#"> Exp. 2 </a></li> 
             </ul>
         </section>
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-        <p> Page by Ophelia Hsiao <a href="mailto:&#111;&#114;&#104;&#115;&#105;&#097;&#111;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;" id="email">Email Me!</a></p>
+        <div><a href="mailto:&#111;&#114;&#104;&#115;&#105;&#097;&#111;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email Me!</a></div>
     </footer>
 
 </body>
