--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <h2> Experiments </h2>
 
             <ul>
-                <li> <a href="exp1.html"> Exp. 1 </a></li>           
-                <li> <a href="#"> Exp. 2 </a></li> 
+                <li> <a href="experiments/exp1.html"> Exp. 1 </a></li>           
+                <li> <a href="experiments/exp2.html"> Exp. 2 </a></li> 
             </ul>
         </section>
 
