--- a/learningjournal/index.html
+++ b/learningjournal/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Research Form Design</h1>
+        <h1>Learning Journals</h1>
     </header>
     <main>
         <article>
