--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <ul>
                 <li> <a href="learningjournal/index.html"> Learning Journal </a></li>           
-                <li> <a href="#"> Mad Libs 2.0 </a></li> 
+                <li> <a href="studio1/index.html"> Mad Libs 2.0 </a></li> 
                 <li> <a href="#"> Every Picture </a></li> 
                 <li> <a href="#"> Game On! </a></li> 
             </ul>
