--- a/studio1/index.html
+++ b/studio1/index.html
@@ -83,13 +83,13 @@
 
         <section id="overlay" class="hidden">
             <article id="madlib">
-                <p>Dear ${words[0]},</p>
+                <p>Dear ${words[0]},
 
-                <p>The Office of ${words[1]} regrets to inform you that we cannot offer you a ${words[2]} at the University of ${words[3]} in the class of ${words[4]}.</p>
+                The Office of ${words[1]} regrets to inform you that we cannot offer you a ${words[2]} at the University of ${words[3]} in the class of ${words[4]}.
 
-                 <p>We ${words[5]} over ${words[6]} ${words[7]}s this year, ${words[8]} more than last year. With that in mind, we can unfortunately only admit a ${words[9]} fraction of ${words[10]} through a very ${words[11]} reviewing process.</p>
+                 We ${words[5]} over ${words[6]} ${words[7]}s this year, ${words[8]} more than last year. With that in mind, we can unfortunately only admit a ${words[9]} fraction of ${words[10]} through a very ${words[11]} reviewing process.
 
-                 <p>While your ${words[7]} was impressive, we ultimately decided that the ${words[12]} it ${words[13]} renders you unsuitable for the ${words[14]} environment we foster here at the University of ${words[3]}.
+                 While your ${words[7]} was impressive, we ultimately decided that the ${words[12]} it ${words[13]} renders you unsuitable for the ${words[14]} environment we foster here at the University of ${words[3]}.
 
                  We are ${words[15]} for your ${words[16]} in the University of ${words[3]}, and wish you the best in your future ${words[17]}.
 
