--- a/index.html
+++ b/index.html
@@ -21,41 +21,44 @@
 
     <main>
         <section>
-            <h2> Studios </h2>
-
+            <article>
+                <h2> Studios </h2>
             <ul>
                 <li> <a href="learningjournal/index.html"> Learning Journal </a></li>           
                 <li> <a href="studio1/index.html"> Mad Libs 2.0 </a></li> 
                 <li> <a href="studio2/index.html"> Every Picture </a></li> 
-                <li> <a href="studio3/index.html"> Game On! </a></li> 
+                <li> <a href="stewtio3/index.html"> Game On! </a></li> 
             </ul>
-
-            <h2> Experiments </h2>
-
+            </article>
+            <article>
+                <h2> Experiments </h2>
             <ul>
                 <li> <a href="experiments/exp1.html"> Exp. 1 </a></li>           
                 <li> <a href="experiments/exp2.html"> Exp. 2 </a></li> 
             </ul>
+            </article>
         </section>
 
         <section>
-            <h2> Research & Development </h2>
-
+            <article>
+                <h2> Research & Development </h2>
             <ul>
-                <li> <a href="#"> Project Brief </a></li>           
+                <li> <a href="final/brief.html"> Project Brief </a></li>           
                 <li> <a href="#"> Design Comp </a></li> 
                 <li> <a href="#"> Version 1 </a></li> 
                 <li> <a href="#"> Version 2 (User Test) </a></li> 
                 <li> <a href="#"> User Test Results </a></li> 
             </ul>
+            </article>
         </section>
 
         <section>
-            <h2> Final </h2>
-
+            <article>
+                <h2> Final </h2>
             <ul>
                 <li> <a href="#"> Final Project </a></li>           
             </ul>
+            </article>
         </section>
     </main>
 
