--- a/final/designcomp.html
+++ b/final/designcomp.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project Design Comp</title>
+    <title>Final Project Process Visualizations</title>
     <link href="https://fonts.googleapis.com/css2?family=Bellota:wght@400;700&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Final Project Design Comp</h1>
+        <h1>Final Project Process Visualizations</h1>
     </header>
     <main>
         <article>
