--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2> Research & Development </h2>
             <ul>
                 <li> <a href="final/brief.html"> Project Brief </a></li>           
-                <li> <a href="final/designcomp.html"> Design Comp </a></li> 
+                <li> <a href="final/designcomp.html">Project Process Visualizations</a></li> 
                 <li> <a href="#"> Version 1 </a></li> 
                 <li> <a href="#"> Version 2 (User Test) </a></li> 
                 <li> <a href="#"> User Test Results </a></li> 
