--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <ul>
                 <li> <a href="final/brief.html"> Project Brief </a></li>           
                 <li> <a href="final/designcomp.html"> Project Process Visualizations </a></li>
-                <li> <a href="#"> Project Expert Review & Report </a></li>
-                <li> <a href="#"> Version 1 </a></li>
+                <li> <a href="final/reviewandreport.html"> Project Expert Review & Report </a></li>
+                <li> <a href="studio2/index.html"> Version 1 </a></li>
                 <li> <a href="#"> Version 2 (User Test) </a></li> 
                 <li> <a href="#"> User Test Results </a></li> 
             </ul>
