--- a/studio2final/index.html
+++ b/studio2final/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Every Picture Final</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bellota:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@400;700&family=Mochiy+Pop+One&family=Rammetto+One&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Mantis Timeline</h1>
-        <p>2019-2023</p>
+        <h2>2019-2023</h2>
     </header>
 
     <main>
