--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
                 <li> <a href="final/designcomp.html"> Project Process Visualizations </a></li>
                 <li> <a href="final/reviewandreport.html"> Project Expert Review & Report </a></li>
                 <li> <a href="studio2/index.html"> Version 1 </a></li>
-                <li> <a href="#"> Version 2 (User Test) </a></li> 
-                <li> <a href="#"> User Test Results </a></li> 
             </ul>
             </article>
         </section>
@@ -57,7 +55,7 @@
             <article>
                 <h2> Final </h2>
             <ul>
-                <li> <a href="#"> Final Project </a></li>           
+                <li> <a href="studio2final/index.html"> Final Project </a></li>           
             </ul>
             </article>
         </section>
